# mimo-orchestrator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: quickstart.py
skills/: multi-agent-orchestration.yaml  web-server.yaml
src/mimo_orchestrator/: __init__.py  agent.py  cli.py  client.py  orchestrator.py  skill_manager.py  tool_registry.py
src/mimo_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
