[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-orchestrator"
version = "0.1.0"
description = "Multi-agent workflow orchestrator powered by Xiaomi MiMo API — build, delegate, and chain AI agents with skills, tools, and persistent memory."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gcxsad", email = "gcxsad@users.noreply.github.com"}
]
keywords = ["ai", "agent", "mimo", "multi-agent", "orchestration", "xiaomi", "llm", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["mimo-orchestrator[dev]"]

[project.scripts]
mimo = "mimo_orchestrator.cli:cli"
mimo-agent = "mimo_orchestrator.cli:agent_cli"
mimo-skill = "mimo_orchestrator.cli:skill_cli"

[project.urls]
Homepage = "https://github.com/gcxsad/mimo-orchestrator"
Repository = "https://github.com/gcxsad/mimo-orchestrator"
Documentation = "https://github.com/gcxsad/mimo-orchestrator#readme"
Issues = "https://github.com/gcxsad/mimo-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
